feat: add aggregated word enpoints
