# doc/api.yaml
@@ -414,6 +414,78 @@ paths:
           description: The user word has been deleted
         401:
           $ref: '#/components/responses/UnauthorizedError'
+  /users/{id}/aggregatedWords:
+    parameters:
+      - name: id
+        description: userId
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: page
+        in: query
+        required: false
+        description: page
+        schema:
+          type: string
+      - name: wordsPerPage
+        in: query
+        required: false
+        description: words per page
+        schema:
+          type: string
+      - name: filter
+        in: query
+        required: false
+        description: Filter by user word fields. It should be a stringified object(e.g. {"difficulty":"hard", "optional.key":"value"}) which meet MongoDB Query object conditions.
+        schema:
+          type: string
+    get:
+      tags:
+        - Users/AggregatedWords
+      summary: Get all user aggregated words
+      description: Gets all user aggregated words
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Word"
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+  /users/{id}/aggregatedWords/{wordId}:
+    parameters:
+      - name: id
+        description: userId
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: wordId
+        description: wordId
+        in: path
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - Users/AggregatedWords
+      summary: Get a user aggregated word by id
+      description: Gets a user aggregated word by id
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserWord"
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        404:
+          description: User's word not found
   /users/{id}/statistics:
     parameters:
       - name: id
