# src/resources/aggregatedWords/aggregatedWord.service.js
@@ -1,0 +1,8 @@
+const wordRepo = require('./aggregatedWord.db.repository');
+
+const getAll = async (userId, perPage, filter) =>
+  wordRepo.getAll(userId, perPage, filter);
+
+const get = async (wordId, userId) => wordRepo.get(wordId, userId);
+
+module.exports = { getAll, get };
